feat: render html server-side

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,12 +8,12 @@
 	<link rel="manifest" href="manifest.json">
 	<link rel="stylesheet" href="">
 	<script defer>navigator.serviceWorker.register("./service-worker.js")</script>
-	<script type='module' src="index.js" defer></script>
 </head>
 
 <body>
 	<h1>Moon Info</h1>
-	<ul id='moon-data'>
+	<ul>
+		{{{moonData}}}
 	</ul>
 </body>
 
