--- a/src/input.css
+++ b/src/input.css
@@ -7,9 +7,6 @@
   --main-text-color: #fff;
   --moon-color: yellow;
   --moon-shadow-color: rgb(5, 2, 48);
-  --moon-dimensions: 100px;
-  --half-moon-dimensions: calc(var(--moon-dimensions) / 2 * -1);
-  --quarter-moon-dimensions: calc(var(--moon-dimensions) / 4 * -1);
 }
 
 body {
@@ -21,8 +18,6 @@ body {
 .moon {
   position: relative;
   border-radius: 50%;
-  width: var(--moon-dimensions);
-  height: var(--moon-dimensions);
   background-color: var(--moon-color);
   overflow: hidden;
 
@@ -32,10 +27,10 @@ body {
     &::after {
       content: ' ';
       position: absolute;
-      border-radius: 50px;
-      height: var(--moon-dimensions);
-      width: var(--moon-dimensions);
-      left: var(--quarter-moon-dimensions);
+      border-radius: 50%;
+      height: 100%;
+      width: 100%;
+      left: -25%;
       background-color: var(--moon-color);
     }
   }
@@ -46,9 +41,9 @@ body {
     &::after {
       content: ' ';
       position: absolute;
-      height: var(--moon-dimensions);
-      width: var(--moon-dimensions);
-      right: var(--half-moon-dimensions);
+      height: 100%;
+      width: 100%;
+      right: -50%;
       background-color: var(--moon-shadow-color);
     }
   }
@@ -59,10 +54,10 @@ body {
     &::after {
       content: ' ';
       position: absolute;
-      border-radius: 50px;
-      height: var(--moon-dimensions);
-      width: var(--moon-dimensions);
-      right: var(--quarter-moon-dimensions);
+      border-radius: 50%;
+      height: 50%;
+      width: 50%;
+      right: -25%;
       background-color: var(--moon-shadow-color);
     }
   }
@@ -74,19 +69,19 @@ body {
   &.waxing-crescent::after {
     content: ' ';
     position: absolute;
-    border-radius: 50px;
-    height: var(--moon-dimensions);
-    width: var(--moon-dimensions);
-    left: var(--quarter-moon-dimensions);
+    border-radius: 50%;
+    height: 100%;
+    width: 100%;
+    left: -25%;
     background-color: var(--moon-shadow-color);
   }
 
   &.first-quarter::after {
     content: ' ';
     position: absolute;
-    height: var(--moon-dimensions);
-    width: var(--moon-dimensions);
-    left: var(--half-moon-dimensions);
+    height: 100%;
+    width: 100%;
+    left: -50%;
     background-color: var(--moon-shadow-color);
   }
 
@@ -96,10 +91,10 @@ body {
     &::after {
       content: ' ';
       position: absolute;
-      border-radius: 50px;
-      height: var(--moon-dimensions);
-      width: var(--moon-dimensions);
-      right: var(--quarter-moon-dimensions);
+      border-radius: 50%;
+      height: 100%;
+      width: 100%;
+      right: -25%;
       background-color: var(--moon-color);
     }
   }
