--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,13 +10,15 @@
 	<script defer>navigator.serviceWorker.register("./service-worker.js")</script>
 </head>
 
-<body class='space-y-6'>
-	<h1 class='text-3xl font-bold underline'>Moon Info</h1>
-	<div class="flex flex-wrap items-center gap-4">
-		<div class="aspect-square moon {{phase}}"></div>
-		<ul class='flex-none min-w-max'>
+<body class='flex flex-col justify-center items-center gap-6 my-6'>
+
+	<h1 class='font-bold text-3xl pb-5'>Today's Moon:</h1>
+	<div class='flex flex-row flex-wrap gap-6 w-full justify-center items-center'>
+		<div class="w-1/3 aspect-square moon {{phase}}"></div>
+		<dl class=''>
 			{{{moonData}}}
-		</ul>
+		</dl>
+		</div>
 	</div>
 </body>
 
