--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
     >
       <div class='moon aspect-square w-1/3 {{phase}}'></div>
       <dl class=''>
-        {{{moonData}}}
+        {{{moonDataHtml}}}
       </dl>
     </div>
   </body>
