--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,28 +1,24 @@
 <html lang='en'>
 
-  <head>
-    <meta charset='UTF-8' />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>Moon Info</title>
-    <link rel='stylesheet' href='style.css' />
-    <link rel='manifest' href='manifest.json' />
-    <link rel='stylesheet' href='' />
-    <script
-      defer
-    >navigator.serviceWorker.register("./service-worker.js")</script>
+<head>
+  <meta charset='UTF-8' />
+  <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+  <title>Moon Info</title>
+  <link rel='stylesheet' href='style.css' />
+  <link rel='manifest' href='manifest.json' />
+  <link rel='stylesheet' href='' />
+  <script defer>navigator.serviceWorker.register("./service-worker.js")</script>
   </head>
 
-  <body class='my-6 flex flex-col items-center justify-center gap-6'>
+<body class='my-6 flex flex-col items-center justify-center gap-6'>
 
-    <h1 class='pb-5 text-3xl font-bold'>Today's Moon:</h1>
-    <div
-      class='flex w-full flex-row flex-wrap items-center justify-center gap-6'
-    >
-      <div class='moon aspect-square w-1/3 {{phase}}'></div>
-      <dl class=''>
-        {{{moonDataHtml}}}
-      </dl>
-    </div>
+  <h1 class='pb-5 text-3xl font-bold'>Today's Moon:</h1>
+  <div class='flex w-full flex-row flex-wrap items-center justify-center gap-6'>
+    <div class='moon aspect-square w-1/3 {{phase}}'></div>
+    <dl class=''>
+      {{{moonDataHtml}}}
+    </dl>
+  </div>
   </body>
 
 </html>
